# scigrad

./: .gitignore  README.md  pyproject.toml  requirements.txt  scigrad_prompt.md
.github/agents/: api.agent.md  architect.agent.md  scheduler.agent.md
examples/: quickstart_demo.py  show_graph.py
scigrad/: __init__.py  device.py  kernel.py  nn.py  numpy.py  ops.py  scheduler.py  tensor.py
scigrad/codegen/: cpu.py  cuda.py  metal.py  opencl.py
tests/: test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_layer6.py  test_layer7.py
